add: site header and footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,109 @@
 
 <body>
 
+  <header class="site-header">
+    <div class="site-header__container container">
+      <a class="logo" href="index.html">
+        <img class="logo__img" src="./img/logo.svg" alt="humocommerce logo" width="280" height="52">
+      </a>
+      <div class="site-header__content">
+        <a class="site-header__phone site-link" href="tel:998998217094">
+          <span class="site-header__phone-icon-wrapper">
+            <img class="site-header__phone-icon site-link__icon" src="./img/phone.svg" alt="" width="24" height="24" />
+          </span>
+          <span class="site-header__phone-content site-link__content">
+            <span class="site-link__title">+998 99 821 70 94</span>
+            <span class="site-link__subtitle">bepul qo'ng'iroq</span>
+          </span>
+        </a>
+        <button class="site-header__lang">
+          <span class="site-header__lang-text">Uz</span>
+          <img class="site-header__lang-arrow" src="./img/arrow-down.svg" alt="" width="8" height="7">
+        </button>
+        <a class="site-header__link site-primary-link site-primary-link--middle" href="#">Demoni ko’rish</a>
+      </div>
+      <button class="site-header__burger js-modal-toggler" aria-label="modal toggler">
+      </button>
+    </div>
+    <div class="site-header__modal">
+      <a class="site-header__modal-link" href="#">Demoni ko’rish</a>
+      <a class="site-header__modal-link" href="tel:998998217094">+998 99 821 70 94</a>
+    </div>
+  </header>
+
+  <main class="site-main">
+
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <div class="site-footer__container">
+        <div class="site-footer__top">
+          <a class="site-footer__logo logo logo--bigger" href="index.html">
+            <img class="logo__img" src="./img/logo.svg" alt="" width="387" height="72">
+          </a>
+          <div class="site-footer__content">
+            <p class="site-footer__description">
+              Online biznesingizni bir joydan ishlashiga imkon beruvchi kuchli boshqaruv vositasi
+            </p>
+            <div class="site-footer__links">
+              <a class="site-footer__link site-link site-link--bigger" href="tel:998998217094">
+                <img class="site-link__icon" src="./img/phone.svg" alt="" width="40" height="40" />
+                <span class="site-link__content">
+                  <span class="site-link__title">+998 99 821 70 94</span>
+                  <span class="site-link__subtitle">Звонок бесплатный</span>
+                </span>
+              </a>
+              <a class="site-footer__link site-link site-link--bigger" href="mailto:humo@gmail.com">
+                <img class="site-link__icon" src="./img/chat.svg" alt="" width="40" height="40" />
+                <span class="site-link__content">
+                  <span class="site-link__title">humo@gmail.com</span>
+                </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="site-footer__bottom">
+          <p class="site-footer__copyright">2022 HUMOCOMMERCE. Все права защищены.</p>
+          <ul class="site-footer__socials">
+            <li class="site-footer__social-item">
+              <a class="site-footer__social-link" href="#">
+                <img class="site-footer__social-icon" src="./img/icon-facebook.svg" alt="icon of facebook" width="32"
+                  height="32">
+              </a>
+            </li>
+            <li class="site-footer__social-item">
+              <a class="site-footer__social-link" href="#">
+                <img class="site-footer__social-icon" src="./img/icon-instagram.svg" alt="icon of instagram" width="32"
+                  height="32">
+              </a>
+            </li>
+            <li class="site-footer__social-item">
+              <a class="site-footer__social-link" href="#">
+                <img class="site-footer__social-icon" src="./img/icon-linkedin.svg" alt="icon of linkedin" width="32"
+                  height="32">
+              </a>
+            </li>
+            <li class="site-footer__social-item">
+              <a class="site-footer__social-link" href="#">
+                <img class="site-footer__social-icon" src="./img/icon-twitter.svg" alt="icon of twitter" width="32"
+                  height="32">
+              </a>
+            </li>
+            <li class="site-footer__social-item">
+              <a class="site-footer__social-link" href="#">
+                <img class="site-footer__social-icon" src="./img/icon-telegram.svg" alt="icon of telegram" width="32"
+                  height="32">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
