--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uz">
 
 <head>
   <meta charset="UTF-8">
@@ -42,7 +42,57 @@
   </header>
 
   <main class="site-main">
-
+    <h1 class="visually-hidden">Humocommerce platformasi</h1>
+    <section class="hero">
+      <h2 class="visually-hidden">Humocommerce online hizmatlari</h2>
+      <div class="container">
+        <div class="hero__container">
+          <div class="hero__content">
+            <p class="hero__content-title">Online biznesingizni boshlang!</p>
+            <p class="hero__content-desc description">Ambitsiyadan harakatga o'tish uchun qadamlar qo'ying.Mijozlaringiz
+              qayerda
+              bo'lishidan qat'iy nazar - onlayn, oson, tez va har joyda sotish imkonini beruvchi yagona platforma.</p>
+            <a class="site-primary-link hero__demo-link" href="#">Demoni ko’rish</a>
+            <div class="hero__play-video">
+              <a class="hero__play-video-link" href="#">
+                <span class="hero__play-video-inner">
+                  <img class="hero__play-video-img" src="./img/play.svg" alt="play" width="34" height="34">
+                </span>
+              </a>
+              <p class="hero__play-video-desc">Video: Humocommerce qanday ishlaydi?</p>
+            </div>
+          </div>
+          <ul class="hero__grid">
+            <li class="hero__grid-item hero__grid-item--purple">
+              <a class="hero__grid-item-inner" href="#">
+                <img class="hero__grid-item-img" src="./img/purple.jpg" alt="">
+              </a>
+            </li>
+            <li class="hero__grid-item hero__grid-item--blue">
+              <a class="hero__grid-item-inner" href="#">
+                <img class="hero__grid-item-img" src="./img/blue.jpg" alt="">
+              </a>
+            </li>
+            <li class="hero__grid-item hero__grid-item--silver">
+              <a class="hero__grid-item-inner" href="#">
+                <img class="hero__grid-item-img" src="./img/silver.jpg" alt="">
+              </a>
+            </li>
+          </ul>
+          <div class="hero__demo-link-wrapper">
+            <a class="site-primary-link hero__demo-link hero__demo-link--mobile" href="#">Demoni ko’rish</a>
+          </div>
+        </div>
+        <div class="hero__play-video hero__play-video--tablet">
+          <a class="hero__play-video-link" href="#">
+            <span class="hero__play-video-inner">
+              <img class="hero__play-video-img" src="./img/play.svg" alt="">
+            </span>
+          </a>
+          <p class="hero__play-video-desc">Video: Humocommerce qanday ishlaydi?</p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
