--- a/index.html
+++ b/index.html
@@ -93,6 +93,23 @@
         </div>
       </div>
     </section>
+    <section class="faq">
+      <div class="faq__container container">
+        <h2 class="faq__title blue-title blue-title--big">Humocommerce bilan...</h2>
+        <p class="faq__desc">Istalgan joyda kerakli haridorlarni topish va sotish uchun qulay platforma.</p>
+        <ul class="faq__list">
+          <li class="faq__item faq__item--yellow">
+            <p class="faq__item-desc">Tez va oson</p>
+          </li>
+          <li class="faq__item faq__item--blue">
+            <p class="faq__item-desc">Hammasi bir joyda</p>
+          </li>
+          <li class="faq__item faq__item--silver">
+            <p class="faq__item-desc">Vaqt tejamkorligi</p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
