--- a/index.html
+++ b/index.html
@@ -110,6 +110,19 @@
         </ul>
       </div>
     </section>
+    <section class="product">
+      <div class="container">
+        <div class="product__content">
+          <h2 class="visually-hidden">Biznesingizni rivojlantirish</h2>
+          <p class="product__title">Mijozlarga online biznesingiz bilan bog'lanishga yordam bering</p>
+          <p class="product__desc description">Humocommerce yordamida siz qisqa vaqt oralig'ida zamonaviy onlayn-do'kon
+            ishini
+            sozlashingiz mumkin. Jamoamiz sizning dizayningiz va boshqa ehtiyojlaringizni hisobga olgan holda do'konni
+            yaratish va qo'llab-quvvatlashda yordam beradi.</p>
+          <a class="site-primary-link" href="#">Bepul demo</a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
