--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
         </div>
       </div>
     </section>
+    <section class="control">
+      <h2 class="visually-hidden">Humocommerce bilan biznes boshqarish</h2>
+      <div class="container">
+        <div class="control__container">
+          <p class="control__heading control__heading--mobile">Humocommerce bilan <span>oson</span> boshqarish</p>
+          <img class="control__img" src="./img/control.png" alt="" width="655" height="723">
+          <div class="control__content">
+            <p class="control__heading">Humocommerce bilan <span>oson</span> boshqarish</p>
+            <p class="control__desc description">Ambitsiyadan harakatga o'tish uchun qadamlar qo'ying.Mijozlaringiz
+              qayerda
+              bo'lishidan qat'iy nazar - onlayn, oson, tez va har joyda sotish imkonini beruvchi yagona platforma.</p>
+            <a class="site-primary-link" href="#">Bepul demo</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
