--- a/index.html
+++ b/index.html
@@ -139,6 +139,49 @@
         </div>
       </div>
     </section>
+    <section class="demo-sites">
+      <h2 class="visually-hidden">Demo saytlar</h2>
+      <div class="container">
+        <div class="demo-sites__content">
+          <p class="demo-sites__title">Demo saytlarni ko’rish</p>
+          <p class="demo-sites__desc description">Siz istalgan vaqtda demoga buyurtma berishingiz yoki shablonlarni
+            tekshirishingiz
+            mumkin. Sizning so'rovingiz bo'yicha biz sizning elektron tijoratingizni noldan loyihalashimiz ham mumkin.
+          </p>
+          <div class="demo-sites__carousel-wrapper">
+            <button class="demo-sites__carousel-btn demo-sites__carousel-btn--prev" aria-label="previous">
+              <img src="./img/btn-arrow.svg" alt="" width="56" height="56">
+            </button>
+            <ul class="demo-sites__carousel">
+              <li class="demo-sites__carousel-item">
+                <div class="demo-sites__carousel-card">
+                  <img class="demo-sites__carousel-img" src="./img/man.jpg" alt="" width="426" height="279">
+                </div>
+                <a class="demo-sites__carousel-item-link" href="#">Ko’z oynak do’koni</a>
+              </li>
+              <li class="demo-sites__carousel-item">
+                <div class="demo-sites__carousel-card">
+                  <img class="demo-sites__carousel-img" src="./img/man.jpg" alt="" width="426" height="279">
+                </div>
+                <a class="demo-sites__carousel-item-link" href="#">Ko’z oynak do’koni</a>
+              </li>
+              <li class="demo-sites__carousel-item">
+                <div class="demo-sites__carousel-card">
+                  <img class="demo-sites__carousel-img" src="./img/man.jpg" alt="" width="426" height="279">
+                </div>
+                <a class="demo-sites__carousel-item-link" href="#">Ko’z oynak do’koni</a>
+              </li>
+            </ul>
+            <button class="demo-sites__carousel-btn demo-sites__carousel-btn--next" aria-label="next">
+              <img src="./img/btn-arrow.svg" alt="" width="56" height="56">
+            </button>
+          </div>
+          <div class="demo-sites__link">
+            <a class="site-primary-link" href="#">Bepul demo</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
