--- a/index.html
+++ b/index.html
@@ -182,6 +182,28 @@
         </div>
       </div>
     </section>
+    <section class="info">
+      <h2 class="visually-hidden">21-asr quroli integratsiya bilan muammo endi Humocommerce bilan yo'q. Istalgan to'lov
+        turini integratsiya imkoniyati.</h2>
+      <div class="container">
+        <ul class="info__list">
+          <li class="info__list-item">
+            <h3 class="info__list-item-heading heading">21-asr quroli integratsiya bilan muammo endi Humocommerce bilan
+              yo'q. Istalgan to'lov turini integratsiya imkoniyati.</h3>
+            <div class="info__list-item-img-wrapper">
+              <img class="info__list-item-img" src="./img/paymant.jpg" alt="" width="747" height="710">
+            </div>
+          </li>
+          <li class="info__list-item">
+            <h3 class="info__list-item-heading heading">Barcha ma'lumotlarni turli tahliliy platformalarda emas, balki
+              Humocommerce bilan boshqarish imkoniyati</h3>
+            <div class="info__list-item-img-wrapper">
+              <img class="info__list-item-img" src="./img/analytic.jpg" alt="" width="747" height="710">
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
