--- a/index.html
+++ b/index.html
@@ -204,6 +204,31 @@
         </ul>
       </div>
     </section>
+    <section class="partners">
+      <div class="container">
+        <h2 class="partners__heading">Bizning hamkorlar</h2>
+        <p class="partners__desc description">Biz hamkorlaimiz bilan ishlashdan juda mamnunmiz va ularni ham doimo
+          mamnun
+          qilishga urinamiz</p>
+      </div>
+      <ul class="partners__carousel">
+        <li class="partners__carousel-item">
+          <img class="partners__carousel-item-img" src="./img/masterkabab.png" alt="" width="182" height="42">
+        </li>
+        <li class="partners__carousel-item">
+          <img class="partners__carousel-item-img" src="./img/riada.png" alt="" width="182" height="42">
+        </li>
+        <li class="partners__carousel-item">
+          <img class="partners__carousel-item-img" src="./img/kids.png" alt="" width="182" height="42">
+        </li>
+        <li class="partners__carousel-item">
+          <img class="partners__carousel-item-img" src="./img/dekarden.png" alt="" width="182" height="42">
+        </li>
+        <li class="partners__carousel-item">
+          <img class="partners__carousel-item-img" src="./img/rebest.png" alt="" width="182" height="42">
+        </li>
+      </ul>
+    </section>
   </main>
 
   <footer class="site-footer">
