--- a/index.html
+++ b/index.html
@@ -229,6 +229,145 @@
         </li>
       </ul>
     </section>
+    <section class="plans">
+      <div class="plans__container container">
+        <h2 class="plans__heading blue-title blue-title--min">Plans</h2>
+        <p class="plans__subtitle">Qulay narxlar...</p>
+        <p class="plans__desc description">Siz istalgan vaqtda demoga buyurtma berishingiz yoki shablonlarni
+          tekshirishingiz mumkin.
+        </p>
+        <ol class="plans__list">
+          <li class="plans__item">
+            <div class="plans__item-top">
+              <div class="plans__item-title"><img class="plans__item-status-img" src="./img/basic.svg" alt="" width="40"
+                  height="40">
+                <h3 class="plans__item-status">Basic plan</h3>
+                <b class="plans__item-cost">$2500</b>
+              </div>
+              <ul class="plans__item-list">
+                <li class="plans__item-checks">Website</li>
+                <li class="plans__item-checks">Telegram bot</li>
+                <li class="plans__item-checks">Yetuk analitika</li>
+                <li class="plans__item-checks">Integratsiyalar <span>+2</span></li>
+                <li class="plans__item-checks"><b>10</b> soat bepul yordam</li>
+                <li class="plans__item-checks">Standart temalar</li>
+                <li class="plans__item-checks">Tex support $29</li>
+                <li class="plans__item-checks plans__item-checks--disable">Mobil dastur</li>
+                <li class="plans__item-checks plans__item-checks--disable">Delivery App</li>
+              </ul>
+            </div>
+            <div class="plans__item-bottom">
+              <a class="site-primary-link site-primary-link--min" href="#">14 kun bepul demo</a>
+            </div>
+          </li>
+          <li class="plans__item">
+            <div class="plans__item-top">
+              <div class="plans__item-title"><img class="plans__item-status-img" src="./img/starter.svg" alt=""
+                  width="40" height="40">
+                <h3 class="plans__item-status">Starter</h3>
+                <b class="plans__item-cost">$3500</b>
+              </div>
+              <ul class="plans__item-list">
+                <li class="plans__item-checks">Website</li>
+                <li class="plans__item-checks">Telegram bot</li>
+                <li class="plans__item-checks">Yetuk analitika</li>
+                <li class="plans__item-checks">Integratsiyalar <span>+5</span></li>
+                <li class="plans__item-checks"><b>20</b> soat bepul yordam</li>
+                <li class="plans__item-checks"><b>Pullik</b> temalar</li>
+                <li class="plans__item-checks">Tex support $49</li>
+                <li class="plans__item-checks">Mobil dastur</li>
+                <li class="plans__item-checks plans__item-checks--disable">Delivery App</li>
+              </ul>
+            </div>
+            <div class="plans__item-bottom">
+              <a class="site-primary-link site-primary-link--min" href="#">30 kun bepul demo</a>
+            </div>
+          </li>
+          <li class="plans__item">
+            <div class="plans__item-top">
+              <div class="plans__item-title"><img class="plans__item-status-img" src="./img/starter.svg" alt=""
+                  width="40" height="40">
+                <h3 class="plans__item-status">Growth</h3>
+                <b class="plans__item-cost">$5000</b>
+              </div>
+              <ul class="plans__item-list">
+                <li class="plans__item-checks">Website</li>
+                <li class="plans__item-checks">Telegram bot</li>
+                <li class="plans__item-checks">Yetuk analitika</li>
+                <li class="plans__item-checks">Integratsiyalar <span>+10</span></li>
+                <li class="plans__item-checks"><b>30</b> soat bepul yordam</li>
+                <li class="plans__item-checks"><b>Pullik va individual</b> temalar</li>
+                <li class="plans__item-checks">Tex support $29</li>
+                <li class="plans__item-checks">Mobil dastur</li>
+                <li class="plans__item-checks">Delivery App</li>
+              </ul>
+            </div>
+            <div class="plans__item-bottom">
+              <a class="site-primary-link site-primary-link--min" href="#">30 kun bepul demo</a>
+            </div>
+          </li>
+        </ol>
+      </div>
+    </section>
+    <section class="questions">
+      <div class="questions__container container">
+        <h2 class="questions__heading">Ko'p beriladigan savollar</h2>
+        <ul class="questions__list">
+          <li class="questions__item questions__item--open">
+            <div class="question__item-header">
+              <h3 class="questions__item-title">Ежедневная торговля?</h3>
+              <button class="questions__item-btn">
+                <img src="./img/btn-arrow.svg" alt="" width="40" height="40">
+              </button>
+            </div>
+            <p class="questions__item-answer">Чтобы узнать, похож бизнес или нет, нужно как можно быстрее выйти на
+              рынок.Процесс должен быть максимально быстрым, простым и дешевым.Чтобы узнать, похож бизнес или нет, нужно
+              как можно быстрее выйти на рынок.
+              Процесс должен быть максимально быстрым, простым и дешевым.Чтобы узнать, похож бизнес или нет, нужно как
+              можно быстрее выйти на рынок.Процесс должен быть максимально быстрым, простым и дешевым.</p>
+          </li>
+          <li class="questions__item">
+            <div class="question__item-header">
+              <h3 class="questions__item-title">Ежедневная торговля?</h3>
+              <button class="questions__item-btn">
+                <img src="./img/btn-arrow.svg" alt="" width="40" height="40">
+              </button>
+            </div>
+            <p class="questions__item-answer">Чтобы узнать, похож бизнес или нет, нужно как можно быстрее выйти на
+              рынок.Процесс должен быть максимально быстрым, простым и дешевым.Чтобы узнать, похож бизнес или нет, нужно
+              как можно быстрее выйти на рынок.
+              Процесс должен быть максимально быстрым, простым и дешевым.Чтобы узнать, похож бизнес или нет, нужно как
+              можно быстрее выйти на рынок.Процесс должен быть максимально быстрым, простым и дешевым.</p>
+          </li>
+          <li class="questions__item">
+            <div class="question__item-header">
+              <h3 class="questions__item-title">Ежедневная торговля?</h3>
+              <button class="questions__item-btn">
+                <img src="./img/btn-arrow.svg" alt="" width="40" height="40">
+              </button>
+            </div>
+            <p class="questions__item-answer">Чтобы узнать, похож бизнес или нет, нужно как можно быстрее выйти на
+              рынок.Процесс должен быть максимально быстрым, простым и дешевым.Чтобы узнать, похож бизнес или нет, нужно
+              как можно быстрее выйти на рынок.
+              Процесс должен быть максимально быстрым, простым и дешевым.Чтобы узнать, похож бизнес или нет, нужно как
+              можно быстрее выйти на рынок.Процесс должен быть максимально быстрым, простым и дешевым.</p>
+          </li>
+          <li class="questions__item">
+            <div class="question__item-header">
+              <h3 class="questions__item-title">Ежедневная торговля?</h3>
+              <button class="questions__item-btn">
+                <img src="./img/btn-arrow.svg" alt="" width="40" height="40">
+              </button>
+            </div>
+            <p class="questions__item-answer">Чтобы узнать, похож бизнес или нет, нужно как можно быстрее выйти на
+              рынок.Процесс должен быть максимально быстрым, простым и дешевым.Чтобы узнать, похож бизнес или нет, нужно
+              как можно быстрее выйти на рынок.
+              Процесс должен быть максимально быстрым, простым и дешевым.Чтобы узнать, похож бизнес или нет, нужно как
+              можно быстрее выйти на рынок.Процесс должен быть максимально быстрым, простым и дешевым.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
@@ -263,31 +402,31 @@
           <p class="site-footer__copyright">2022 HUMOCOMMERCE. Все права защищены.</p>
           <ul class="site-footer__socials">
             <li class="site-footer__social-item">
-              <a class="site-footer__social-link" href="#">
+              <a class="site-footer__social-link" target="_blank" href="#">
                 <img class="site-footer__social-icon" src="./img/icon-facebook.svg" alt="icon of facebook" width="32"
                   height="32">
               </a>
             </li>
             <li class="site-footer__social-item">
-              <a class="site-footer__social-link" href="#">
+              <a class="site-footer__social-link" target="_blank" href="#">
                 <img class="site-footer__social-icon" src="./img/icon-instagram.svg" alt="icon of instagram" width="32"
                   height="32">
               </a>
             </li>
             <li class="site-footer__social-item">
-              <a class="site-footer__social-link" href="#">
+              <a class="site-footer__social-link" target="_blank" href="#">
                 <img class="site-footer__social-icon" src="./img/icon-linkedin.svg" alt="icon of linkedin" width="32"
                   height="32">
               </a>
             </li>
             <li class="site-footer__social-item">
-              <a class="site-footer__social-link" href="#">
+              <a class="site-footer__social-link" target="_blank" href="#">
                 <img class="site-footer__social-icon" src="./img/icon-twitter.svg" alt="icon of twitter" width="32"
                   height="32">
               </a>
             </li>
             <li class="site-footer__social-item">
-              <a class="site-footer__social-link" href="#">
+              <a class="site-footer__social-link" target="_blank" href="#">
                 <img class="site-footer__social-icon" src="./img/icon-telegram.svg" alt="icon of telegram" width="32"
                   height="32">
               </a>
