--- a/index.html
+++ b/index.html
@@ -141,13 +141,15 @@
     </section>
     <section class="demo-sites">
       <h2 class="visually-hidden">Demo saytlar</h2>
-      <div class="container">
+      <div>
         <div class="demo-sites__content">
-          <p class="demo-sites__title">Demo saytlarni ko’rish</p>
-          <p class="demo-sites__desc description">Siz istalgan vaqtda demoga buyurtma berishingiz yoki shablonlarni
-            tekshirishingiz
-            mumkin. Sizning so'rovingiz bo'yicha biz sizning elektron tijoratingizni noldan loyihalashimiz ham mumkin.
-          </p>
+          <div class="container">
+            <p class="demo-sites__title">Demo saytlarni ko’rish</p>
+            <p class="demo-sites__desc description">Siz istalgan vaqtda demoga buyurtma berishingiz yoki shablonlarni
+              tekshirishingiz
+              mumkin. Sizning so'rovingiz bo'yicha biz sizning elektron tijoratingizni noldan loyihalashimiz ham mumkin.
+            </p>
+          </div>
           <div class="demo-sites__carousel-wrapper">
             <button class="demo-sites__carousel-btn demo-sites__carousel-btn--prev" aria-label="previous">
               <img src="./img/btn-arrow.svg" alt="" width="56" height="56">
@@ -176,8 +178,10 @@
               <img src="./img/btn-arrow.svg" alt="" width="56" height="56">
             </button>
           </div>
-          <div class="demo-sites__link">
-            <a class="site-primary-link" href="#">Bepul demo</a>
+          <div class="container">
+            <div class="demo-sites__link">
+              <a class="site-primary-link" href="#">Bepul demo</a>
+            </div>
           </div>
         </div>
       </div>
